fix css bug on Safari

--- a/client/main.less
+++ b/client/main.less
@@ -39,6 +39,7 @@ body {
 
         img {
             width: @image-size;
+            min-width: @image-size;
             height: @image-size;
         }
 
